--- a/CronometerLogMealApi/CronometerLogMealApi.csproj
+++ b/CronometerLogMealApi/CronometerLogMealApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="F23.StringSimilarity" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
