Add Telegram Bot API client and configuration
- Implement SendMessageRequest and SendMessageResponse models
- Create TelegramHttpClient for interacting with Telegram API
- Update Program.cs to configure TelegramHttpClient
- Add Telegram BotToken configuration to appsettings
- Update .gitignore to include appsettings.json

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 nutriapp.api/appsettings.Development.json
 CronometerAPI/appsettings.json
+CronometerLogMealApi/appsettings.json
