--- a/CronometerLogMealApi/appsettings.Development.json
+++ b/CronometerLogMealApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Telegram": {
+    "BotToken": "YOUR_BOT_TOKEN_HERE"
   }
 }
