--- a/CronometerLogMealApi/appsettings.Example.json
+++ b/CronometerLogMealApi/appsettings.Example.json
@@ -7,5 +7,10 @@
   },
   "Telegram": {
     "BotToken": "YOUR_BOT_TOKEN_HERE"
+  },
+  "Gemini": {
+    "ApiKey": "YOUR_GEMINI_API_KEY",
+    "Model": "gemini-2.5-pro",
+    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta"
   }
 }
