--- a/CronometerLogMealApi/CronometerLogMealApi.csproj
+++ b/CronometerLogMealApi/CronometerLogMealApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Playwright" Version="1.57.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="F23.StringSimilarity" Version="1.1.0" />
   </ItemGroup>
