--- a/CronometerLogMealApi/appsettings.Example.json
+++ b/CronometerLogMealApi/appsettings.Example.json
@@ -11,6 +11,10 @@
   "Gemini": {
     "ApiKey": "YOUR_GEMINI_API_KEY",
     "Model": "gemini-2.5-pro",
-    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta"
+    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta",
+    "Cookies": {
+      "__Secure-1PSID": "YOUR_COOKIE_VALUE",
+      "__Secure-1PSIDTS": "YOUR_COOKIE_VALUE"
+    }
   }
 }
