--- a/CronometerLogMealApi/appsettings.Example.json
+++ b/CronometerLogMealApi/appsettings.Example.json
@@ -10,7 +10,20 @@
   },
   "Gemini": {
     "ApiKey": "YOUR_GEMINI_API_KEY",
-    "Model": "gemini-2.5-pro",
-    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta"
+    "Model": "gemini-2.0-flash",
+    "VisionModel": "gemini-2.0-flash",
+    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta",
+    "Cookies": {
+      "__Secure-1PSID": "YOUR_SECURE_1PSID",
+      "__Secure-1PSIDTS": "YOUR_SECURE_1PSIDTS"
+    }
+  },
+  "OpenAI": {
+    "ApiKey": "YOUR_OPENAI_API_KEY",
+    "Model": "gpt-5-nano"
+  },
+  "AzureVision": {
+    "Endpoint": "YOUR_AZURE_VISION_ENDPOINT",
+    "ApiKey": "YOUR_AZURE_VISION_API_KEY"
   }
 }
