--- a/CronometerLogMealApi/CronometerLogMealApi.csproj
+++ b/CronometerLogMealApi/CronometerLogMealApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.AI.Vision.ImageAnalysis" Version="1.0.0" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="F23.StringSimilarity" Version="1.1.0" />
   </ItemGroup>
