feat: Enhance clarification preference handling and logging, including user ID support and legacy document checks

--- a/CronometerLogMealApi/appsettings.Example.json
+++ b/CronometerLogMealApi/appsettings.Example.json
@@ -19,8 +19,9 @@
     }
   },
   "OpenAI": {
-    "ApiKey": "YOUR_OPENAI_API_KEY",
-    "Model": "gpt-5-nano"
+    "ApiKey": "YOUR_OPENAI_API_KEY_OR_GITHUB_PAT",
+    "Model": "gpt-4o",
+    "BaseUrl": "https://api.openai.com/v1/"
   },
   "AzureVision": {
     "Endpoint": "YOUR_AZURE_VISION_ENDPOINT",
